# the-controller

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  agents.md  dev.sh  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest-setup.ts
.claude-plugin/: plugin.json
.github/workflows/: ci.yml  nightly.yml
deploy/: Caddyfile  deploy.sh  the-controller.service
docs/: demo.md  domain-knowledge.md  keyboard-modes.md
docs/plans/: 2026-02-28-agent-platform-implementation.md  2026-02-28-fuzzy-finder-implementation.md  2026-03-03-codex-session-support-design.md  2026-03-03-codex-session-support.md  2026-03-03-focus-after-delete-design.md  2026-03-03-focus-after-delete.md  2026-03-03-terminal-input-fixes-design.md  2026-03-04-create-issue.md  2026-03-04-github-task-panel.md  2026-03-04-session-status-hooks-impl.md  2026-03-04-worktree-project-name-design.md  2026-03-05-assign-issue-to-session-design.md  2026-03-05-assign-issue-to-session.md  2026-03-05-codex-session-frontend-design.md  2026-03-05-codex-session-frontend-impl.md  2026-03-05-drag-drop-images-design.md  2026-03-05-drag-drop-images.md  2026-03-05-filter-assigned-issues-design.md  2026-03-05-filter-assigned-issues.md  2026-03-05-fix-issue-creation-design.md  2026-03-05-image-paste-design.md  2026-03-05-image-paste-impl.md  2026-03-06-architecture-cleanup-design.md  2026-03-07-command-registry-design.md  2026-03-07-command-registry.md  2026-03-07-complexity-triage-design.md  2026-03-07-keystroke-visualizer.md  2026-03-08-auto-worker-design.md  2026-03-08-auto-worker.md  2026-03-08-workspace-modes.md  2026-03-09-actionable-maintainer-reports-design.md  2026-03-09-actionable-maintainer-reports.md  2026-03-09-claude-md-symlink-design.md  2026-03-09-staging-single-flow-design.md  2026-03-09-staging-single-flow.md  2026-03-10-app-state-storage-init-design.md  2026-03-10-app-state-storage-init.md  2026-03-10-auto-worker-assignment-label-design.md  2026-03-10-auto-worker-assignment-label.md  2026-03-10-auto-worker-label-migration-cleanup-design.md  (+73 more)
e2e/: eval.sh
e2e/specs/: api-health.spec.ts  architecture-logs.spec.ts  issues-enter-nav.spec.ts  notes-ai-chat.spec.ts  notes-keybindings.spec.ts  notes-vim-o.spec.ts  smoke.spec.ts  ui-consistency.spec.ts  visual-audit.spec.ts  voice-mode-state.spec.ts
scripts/: backfill-auto-worker-assignment-labels.sh  build-sidecars.sh
skills/debugging-ui-with-playwright/: SKILL.md
skills/design/: SKILL.md
skills/executing-plans/: SKILL.md
skills/feedback-widget/: SKILL.md
skills/finishing-a-development-branch/: SKILL.md
skills/requesting-code-review/: SKILL.md
skills/setting-credentials/: SKILL.md
skills/subagent-driven-development/: SKILL.md  code-quality-reviewer-prompt.md
skills/submitting-pr-with-copilot-review/: SKILL.md
skills/synchronizing-skills/: SKILL.md  sync.sh
skills/syncing-upstream-changes/: SKILL.md
skills/test-driven-development/: SKILL.md
skills/the-controller-autonomous-execution/: SKILL.md
skills/the-controller-brainstorming/: SKILL.md
skills/the-controller-debugging-ui-with-playwright/: SKILL.md
skills/the-controller-dispatching-parallel-agents/: SKILL.md
src/: App.svelte  App.test.ts  app.css  build-info.d.ts  main.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: architecture.rs  auto_worker.rs  broker_client.rs  broker_protocol.rs  cli_install.rs  commands.rs  config.rs  emitter.rs  error.rs  generated.rs  keybindings.rs  labels.rs  lib.rs  logging.rs  maintainer.rs  models.rs  note_ai_chat.rs  notes.rs  pty_manager.rs  secure_env.rs  server_helpers.rs  service.rs  session_args.rs  shell_env.rs  skills.rs  state.rs  status_socket.rs  storage.rs  terminal_theme.rs  tmux.rs  token_usage.rs  worktree.rs
src-tauri/src/commands/: github.rs  media.rs  notes.rs
src-tauri/src/deploy/: cloudflare.rs  commands.rs  coolify.rs  credentials.rs  mod.rs
src-tauri/src/server/: main.rs
src-tauri/src/service/: auth.rs  config.rs  deploy.rs  github.rs  maintainer.rs  mod.rs  notes.rs  projects.rs  scaffold.rs  secure_env.rs  sessions.rs  voice.rs
src-tauri/src/voice/: audio_input.rs  audio_output.rs  gain.rs  llm.rs  mod.rs  models.rs  stt.rs  tts.rs  vad.rs
src-tauri/tests/: broker_e2e.rs  integration.rs  server_startup.rs  voice_e2e.rs
src-tauri/the-controller-macros/: Cargo.toml
src-tauri/the-controller-macros/src/: axum_gen.rs  lib.rs  parse.rs  tauri_gen.rs
(+118 files in other folders)
