[package]
name = "the-controller"
version = "0.4.0"
description = "A Tauri desktop app for managing multiple Claude Code sessions"
authors = ["you"]
edition = "2021"

[lib]
name = "the_controller_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
git2 = "0.19"
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
dirs = "5"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-clipboard-manager = "2.3.2"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp"] }
raw-window-handle = "0.6"

[dev-dependencies]
tempfile = "3"
