[package]
name = "the-controller"
version = "0.5.0"
description = "A Tauri desktop app for managing multiple Claude Code sessions"
authors = ["Noel Kwan"]
edition = "2021"
default-run = "the-controller"

[lib]
name = "the_controller_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
chrono = "0.4"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
git2 = "0.19"
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
dirs = "5"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-clipboard-manager = "2.3.2"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp"] }
raw-window-handle = "0.6"
once_cell = "1"
libc = "0.2"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
rfd = "0.16.0"
axum = { version = "0.8", features = ["ws"], optional = true }
tower-http = { version = "0.6", features = ["cors", "fs"], optional = true }
cpal = "0.15"
whisper-rs = "0.12"
ort = { version = "2.0.0-rc.12", features = ["download-binaries"] }
hound = "3.5"
crossbeam-channel = "0.5"
ndarray = "0.17"
notify = "7"
notify-debouncer-mini = "0.5"
the-controller-macros = { path = "the-controller-macros" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
flate2 = "1"

[features]
default = []
server = ["axum", "tower-http"]

# NOTE: `server` source lives outside src/bin/ to avoid Cargo auto-discovery.
# Tauri bundles all auto-discovered bin targets and ignores `required-features`,
# causing build failures. Build separately: cargo build --bin server --features server

[[bin]]
name = "server"
path = "src/server/main.rs"
required-features = ["server"]

[[bin]]
name = "controller-cli"
path = "src/bin/controller-cli.rs"

[[bin]]
name = "pty-broker"
path = "src/bin/pty_broker.rs"

[dev-dependencies]
tempfile = "3"
filetime = "0.2"
tokio-tungstenite = "0.28"
